misc improvements